<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup
        android:id="@+id/radioDiscGrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/disc_per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_per"
            android:checked="true" />

        <RadioButton
            android:id="@+id/disc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:layout_marginLeft="@dimen/padding_50"
            />

    </RadioGroup>

    <EditText
        android:id="@+id/discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_disc"
        />


</LinearLayout>